add swagger autogen
